v0.4.1 补充了状态码，修复bug